# viewer_testcase

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_FLET.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  UV_INSTRUCTIONS.md  app.spec  build.spec  build_macos.sh  pyproject.toml  requirements.txt  run.bat  run_app.py  run_app_v2.py  settings.json  test_case_editor.py  test_case_editor_flet.py  test_case_editor_v1.py
.github/workflows/: build.yml
example/: new_schema_example.json  parse_azure_simple.py  parse_azure_test_cases.py  response.json  response_suit.json  task.md
icons/: icon_mapping.json
import_alm/: README.md  all_suites.json  build_suite_hierarchy.py  const.py  fetch_test_cases.py  requirements.txt  run_import.py  suite_hierarchy_map.json  Инструкция.txt
test_case_editor/: __init__.py  main.py
test_case_editor/docs/: test-cases-guidelines.md
test_case_editor/models/: __init__.py  test_case.py
test_case_editor/repositories/: __init__.py  test_case_repository.py
test_case_editor/services/: __init__.py  test_case_service.py
test_case_editor/ui/: __init__.py  main_window.py
test_case_editor/utils/: __init__.py  allure_generator.py  azure_parser.py  datetime_utils.py  html_report_generator.py  list_models.py  llm.py  prompt_builder.py  pytest_tamplete.json  resource_path.py  settings_path.py  summary_report_generator.py
test_plans/: 3.json  Регина.json
test_suites/from_alm/: 442673.json  442676.json  442677.json  442679.json  442680.json  442681.json  442684.json  442685.json  442687.json  442688.json  442690.json  442691.json  (+133 more)
(+24 files in other folders)
